Add slides 18 - Quadratic Equations

--- a/17 - Binomials.tex
+++ b/17 - Binomials.tex
@@ -166,18 +166,14 @@
       \end{definition}
     \end{column}
     \begin{column}{0.5\textwidth}
-      % \begin{problem}
-      %   If $1/(a + c) = 1/a + 1/c$ find $(a/c)^3$.        
-      % \end{problem}
+      \begin{problem}
+        Factor completely: $x^2 + 2mn - m^2 - n^2$.
+      \end{problem}
 
-      % The fact that they are asking for $(a/c)^3$ suggests that a sum or difference of cubes identity could be useful here.  As a first step, lets get rid of the denominators by multiplying both sides of the equation by $ac(a + c)$.  This yields:
-      % \[ac = c(a + c) + a(a + c),\]
-      % which we rearrange as
-      % \[a^2 + c^2 + ac = 0.\]  
-      % There is no obvious way to proceed here, but examining the difference of cubes identity, we notice the three terms on the left are one of the factors in the identity.   We multiply both sides of our equation by $(a - c)$, to obtain 
-      % \[(a^2 + c^2 + ac)(a - c) = a^3 - c^3 = 0.\]  
-      % Hence $a^3 = c^3$ and $(a/c)^3 = 1$.
-
+      As a first step, we recognize the last 3 terms come from $-(m - n)^2$.  Substituting this into the expression, we get
+      \[x^2  - (m - n)^2.\]
+      This is a difference of squares equal to 
+      \[ [x + (m - n)][x - (m - n)] = (x + m - n)(x - m + n). \]
     \end{column}
   \end{columns}
 \end{frame}
@@ -261,15 +257,6 @@
     \end{column}
   \end{columns}
 \end{frame}
-
-% \begin{frame}{Title}
-%   \begin{columns}[T]
-%     \begin{column}{0.5\textwidth}
-%     \end{column}
-%     \begin{column}{0.5\textwidth}
-%     \end{column}
-%   \end{columns}
-% \end{frame}
 
 % \begin{frame}{Title}
 %   \begin{columns}[T]
