--- a/19 - Word problems.tex
+++ b/19 - Word problems.tex
@@ -322,7 +322,7 @@
     \begin{column}{0.5\textwidth}
       \begin{enumerate}
         \conti
-        \item Paula the painter and her two helpers each paint at constant, but different, rates. They always start at $8{:}00$~AM, and all three always take the same amount of time to eat lunch. On Monday the three of them painted 5$0\%$ of a house, quitting at $4{:}00$~PM. On Tuesday, when Paula wasn't there, the two helpers painted only $24\%$ of the house and quit at $2{:}12$~PM. On Wednesday Paula worked by herself and finished the house by working until $7{:}12$~PM How long, in minutes, was each day's lunch break?
+        \item Paula the painter and her two helpers each paint at constant, but different, rates. They always start at $8{:}00$~AM, and all three always take the same amount of time to eat lunch. On Monday the three of them painted $50\%$ of a house, quitting at $4{:}00$~PM. On Tuesday, when Paula wasn't there, the two helpers painted only $24\%$ of the house and quit at $2{:}12$~PM. On Wednesday Paula worked by herself and finished the house by working until $7{:}12$~PM How long, in minutes, was each day's lunch break?
       \end{enumerate}
     \end{column}
   \end{columns}
